--- a/assets/_scss/_page.scss
+++ b/assets/_scss/_page.scss
@@ -1,4 +1,12 @@
 
+#footer {
+  img {
+    width: 75%;
+    margin: 0 auto;
+    display: block;
+  }
+}
+
 .google-map {
   width: 100%;
   height: 26em;
@@ -8,38 +16,19 @@
   min-height: 10em;
 }
 
-
-#footer {
-  img {
-    width: 75%;
-    margin: 0 auto;
-    display: block;
+@media (max-width: 768px) {
+  #introduction {
+    position: relative;
   }
-}
-
-/* bounce up animation */
-
-.bounce-up .box-bounce {
-  opacity: 0;
-  -moz-transition: all 400ms ease-out;
-  -webkit-transition: all 400ms ease-out;
-  -o-transition: all 400ms ease-out;
-  transition: all 400ms ease-out;
-  -moz-transform: translate3d(0px, 100px, 0px);
-  -webkit-transform: translate3d(0px, 100px, 0px);
-  -o-transform: translate(0px, 100px);
-  -ms-transform: translate(0px, 100px);
-  transform: translate3d(0px, 100, 0px);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.bounce-up.in-view .box-bounce {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
+  
+  #navbarNavAltMarkup {
+    position: absolute;
+    z-index: 1;
+    top: 6.5rem;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 1);
+    left: 0;
+    padding: .5rem 1.5rem;
+    border-top: 1px solid rgba(0,0,0,.1);
+  }
 }
